--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   },
   "homepage": "https://github.com/thiagojacinto/atende-ai-bot-service#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "twilio": "^3.43.0"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0"
   }
 }
