[dependencia] body-parser para lidar com o tipo de resposta da API Twilio

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/thiagojacinto/atende-ai-bot-service#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "twilio": "^3.43.0"
   },
