--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Bot application that performs scheduling activities with some of Twilio's APIs",
   "main": "src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/app.js"
   },
   "repository": {
     "type": "git",
