--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "homepage": "https://github.com/thiagojacinto/atende-ai-bot-service#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "mongoose": "^5.9.11",
     "twilio": "^3.43.0"
   },
   "devDependencies": {
